# team-y

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  check_imports.py  check_middleware.py  create_templates.py  docker-compose.yml  pyproject.toml  requirements.txt  test_aluminum.py  test_db.py  test_graph_init.py  test_integration.py  test_multiturn.py  test_resume.py  test_workflow_execution.py
agents/: __init__.py  document_generator.py  workflow.py
agents/graph/: __init__.py  graph.py  graph.py.backup  nodes.py  state.py
agents/graph/subgraphs/: __init__.py  aluminum_subgraph.py  business_registration_subgraph.py  delivery_subgraph.py  product_subgraph.py
agents/graph/utils/: __init__.py  aluminum_calculator.py  aluminum_parser.py  business_registration_parser.py  delivery_parser.py  document_generator.py  intent_classifier.py  product_parser.py
agents/middleware/: README.md
agents/parsers/: scenario_parsers.py
agents/tools/: __init__.py  approval.py  document.py
bot/: __init__.py  main.py
database/: README.md  __init__.py
database/postgres/: __init__.py  db.py  init.sql  repository.py
middleware/: __init__.py  error_handler.py  langfuse_logging.py
output/: delivery_20251230_052433.docx  delivery_20251230_052741.docx  delivery_20251231_040900.docx  delivery_20251231_054426.docx  delivery_20251231_134548.docx
templates/: deliver_template_new.docx  delivery_template.docx  delivery_template_backup.docx  order_template.docx  product_order_template.docx
test/: temp.py
utils/: __init__.py  create_templates.py  document.py
(+6 files in other folders)
