[project]
name = "team-y-office-automation"
version = "0.1.0"
description = "Discord bot for office automation using LangGraph and LangChain"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.3.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=0.2.0",
    "langgraph-checkpoint-postgres>=0.2.0",
    "openai>=1.0.0",
    "langfuse>=3.0.0",
    "psycopg>=3.1.0",
    "psycopg-pool>=3.2.0",
    "psycopg2-binary>=2.9.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.21",
    "pdf2image>=1.16.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "bot", "database"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
